--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
   padding: 0;
   /* background-color: black; */
 }
-body {
+body,
+html {
   color: white;
   background-color: #000;
   overflow: hidden;
@@ -14,84 +15,78 @@ body {
   width: 100%;
 }
 .main-character {
-  position: absolute;
-  width: 80vh;
+  width: 100vh;
   height: 90vh;
-  left: 0%;
-  top: 10vh;
-  bottom: 0%;
+  margin-left: 0vh;
+  margin-top: 10vh;
   z-index: 2;
   filter: drop-shadow(-1px -1px 9px #02eb98);
 }
 .green-box,
 .green-box2 {
-  max-width: 100vh;
-  min-width: 90vh;
-  width: 80%;
-  left: 10%;
+  display: flex;
+  max-width: 30vw;
+  min-width: 40vw;
   z-index: 1;
 }
 .green-box {
-  position: absolute;
   background-color: #02efa47c;
   transform: skew(-50deg, 0deg);
-  width: 80vh;
-  height: 92vh;
   border: 2px solid #00ffae;
-  left: 5vh;
-  top: 10vh;
+  margin-left: -40vw;
+  margin-top: 15vh;
 }
 .green-box2 {
-  position: absolute;
   background-color: #02efa47c;
   transform: skew(-50deg, 0deg);
-  width: 80vh;
-  height: 90vh;
   border: 2px solid #00ffae;
-  left: 7vh;
-  top: 12vh;
+  margin-left: -42vw;
+  margin-top: 12vh;
+}
+.white-bar,
+.white-bar2 {
+  display: flex;
+  max-width: 80vw;
+  min-width: 20vw;
+  z-index: 1;
 }
 .white-bar {
-  position: absolute;
   background-color: #f7f7f780;
   transform: skew(-50deg, 0deg);
-  width: 40vh;
-  height: 35vh;
   border: 2px solid #fdfdfdc2;
-  left: 50%;
-  bottom: -4%;
+  margin-left: 3vw;
+  margin-top: 70vh;
   z-index: 1;
 }
 .white-bar2 {
-  position: absolute;
   background-color: #f7f7f780;
   transform: skew(-50deg, 0deg);
-  width: 40vh;
-  height: 35vh;
   border: 2px solid #fdfdfdc2;
-  left: 50.8%;
-  bottom: -6%;
+  margin-left: -19vw;
+  margin-top: 72.5vh;
+  z-index: 1;
 }
 
 .decoration1,
 .decoration2,
 .decoration3 {
-  position: absolute;
-
-  height: 25%;
-  width: 25%;
-  filter: blur(9rem);
-  overflow: hidden;
+  display: flex;
+  height: 40%;
+  width: 40%;
+  filter: blur(15rem);
   background-color: #02eb98;
+  overflow: hidden;
+  position: absolute;
 }
+
 .decoration1 {
-  bottom: -15%;
-  right: -15%;
+  bottom: -18%;
+  right: -18%;
 }
 
 .decoration2 {
-  top: -15%;
-  left: -15%;
+  top: -20%;
+  left: -20%;
 }
 
 .decoration3 {
@@ -99,63 +94,58 @@ body {
   top: -15%;
   right: -15%;
 }
-
 .texto-game {
-  color: aliceblue;
   display: flex;
-  flex-wrap: wrap; 
+  color: aliceblue;
   flex-direction: column;
-  /* position: absolute; */
-  width:50vh;
-  height: 40vh;
-  margin-top: 25vh;
-  margin-left: 110vh;
+  flex-shrink: calc(100% - 20%);
+  width: 50vw;
+  height: 50vh;
+  margin-top: 20vh;
+  margin-left: -15vw;
+  /* margin-right: 10vw; */
+  /* background-color: #02eb9a75; */
   z-index: 2;
-  /* background-color: #02eb9a75;  */
 }
 .texto-game > h2 {
-  /* flex: 1; */
-  position: absolute;
   font-size: 3vw;
   font-family: "Press Start 2P", cursive;
-  margin-top:1vh; 
-  margin-left: 15vh;
-  margin-right: 15vh;
+  margin-top: 1vh;
+  margin-left: 8vw;
 }
 .texto-game > h1 {
-  position: absolute;
   font-size: 8vw;
   font-family: "Press Start 2P", cursive;
-  margin-left: 2vh;
-  margin-top: 5vh;
+  margin-left: 2vw;
 }
 .texto-game > h3 {
-  position: absolute;
   font-size: 1.8vw;
   font-family: "Press Start 2P", cursive;
-  margin-left: 6vh;
-  margin-top: 23.5vh;
+  margin-left: 4.5vw;
+  margin-top: 0vh;
 }
 
 .button-box {
-  position: absolute;
   font-size: 2vw;
   font-family: "Press Start 2P", cursive;
-  margin-left: 16vh;
-  margin-right: 15vh;
-  margin-bottom: 3vh;
-  margin-top: 30vh;
-  width: 20vh;
+  margin-left: 9vw;
+  margin-top: 5vh;
+  width: 11vw;
   height: 9vh;
   color: aliceblue;
   border: #00ffae 2px solid;
   background-color: #02eb9a00;
   border-radius: 80px 80px 80px 80px;
   z-index: 1;
-  transition: .7s ease-in-out;
+  transition: 0.7s ease-in-out;
 }
 .button-box:hover {
   background-color: #02eb9a;
   color: #000;
 }
 
+/* @media (max-width: 1430px)and (max-height: 800px) {
+  .main-character {
+    display: none;
+  }
+} */
