--- a/style.css
+++ b/style.css
@@ -118,6 +118,15 @@ html {
   font-family: "Press Start 2P", cursive;
   margin-left: 2vw;
 }
+@media (max-width: 768px) {
+  .texto-game > h1 {
+    font-size: 7vw; 
+  }
+  .texto-game > h3 {
+    font-size: 3vw;
+    margin-left: 2vw;
+  }
+}
 .texto-game > h3 {
   font-size: 1.8vw;
   font-family: "Press Start 2P", cursive;
