--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@
 body,
 html {
   color: white;
-  background-color: #000;
+  background-color: #000 !important;
   overflow: hidden;
 }
-.row {
+.my-container{
   display: flex;
   width: 100%;
 }
-.main-character {
+.my-character {
+  background-color: transparent;
   width: 100vh;
   height: 90vh;
   margin-left: 0vh;
@@ -94,51 +95,67 @@ html {
   top: -15%;
   right: -15%;
 }
-.texto-game {
+.texte-game {
   display: flex;
-  color: aliceblue;
   flex-direction: column;
-  flex-shrink: calc(100% - 20%);
-  width: 50vw;
-  height: 50vh;
+  flex-wrap: nowrap;
+  color: aliceblue;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  right: 20%;
+  /* flex-shrink: calc(100% - 20%); */
+  width: 30vw;
+max-width: 40vw;
+  height: 40vh;
+max-height: 50vh;
   margin-top: 20vh;
-  margin-left: -15vw;
+  /* margin-left: -15vw; */
   /* margin-right: 10vw; */
   /* background-color: #02eb9a75; */
-  z-index: 2;
-}
-.texto-game > h2 {
-  font-size: 3vw;
-  font-family: "Press Start 2P", cursive;
-  margin-top: 1vh;
-  margin-left: 8vw;
-}
-.texto-game > h1 {
-  font-size: 8vw;
-  font-family: "Press Start 2P", cursive;
-  margin-left: 2vw;
-}
-@media (max-width: 768px) {
-  .texto-game > h1 {
-    font-size: 7vw; 
-  }
-  .texto-game > h3 {
-    font-size: 3vw;
-    margin-left: 2vw;
-  }
-}
-.texto-game > h3 {
-  font-size: 1.8vw;
-  font-family: "Press Start 2P", cursive;
-  margin-left: 4.5vw;
-  margin-top: 0vh;
+  z-index: 3;
 }
 
+.texte-game  span:first-of-type{
+  font-size: 3vw;
+  font-family: "Press Start 2P", cursive;
+  /* text-align: center; */
+  line-height: 1;
+}
+.texte-game  span:nth-of-type(2){
+  font-size: 8vw;
+  font-family: "Press Start 2P", cursive;
+  /* text-align: center; */
+  white-space: nowrap;
+  line-height: 1;
+}
+.texte-game  span:last-of-type{
+  font-size: 1.8vw;
+  font-family: "Press Start 2P", cursive;
+  margin-right: 3%;
+  /* text-align: center; */
+}
+
+.texte-game div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5vh;
+  width: 100%;
+  max-height: 10vh;
+  height: 5vh;
+  /* background-color: #02eb9a75; */
+  z-index: 3;
+
+}
 .button-box {
   font-size: 2vw;
   font-family: "Press Start 2P", cursive;
-  margin-left: 9vw;
-  margin-top: 5vh;
+  /* margin-left: 9vw;
+  margin-top: 5vh; */
+  margin-top: 5%;
+  align-self: center;
   width: 11vw;
   height: 9vh;
   color: aliceblue;
@@ -156,5 +173,6 @@ html {
 /* @media (max-width: 1430px)and (max-height: 800px) {
   .main-character {
     display: none;
-  }
-} */
+    }
+    } */
+    /* @media portrait */
