--- a/content/style.css
+++ b/content/style.css
@@ -6,8 +6,10 @@
 }
 body,
 html {
+  display: flex;
   color: white;
   background-color: #000 !important;
+
   overflow: hidden;
 }
 .my-container {
@@ -16,8 +18,9 @@ html {
 }
 .my-character {
   background-color: transparent;
-  max-width: 50%;
-  width: 45vw;
+  max-width: 55vw;
+  min-width: 45vw;
+  width: 55vw;
   height: 90vh;
   margin-left: 0vh;
   margin-top: 10vh;
@@ -29,19 +32,16 @@ html {
   display: flex;
   max-width: 30vw;
   min-width: 40vw;
+  background-color: #02efa47c;
+  border: 2px solid #00ffae;
+  transform: skew(-50deg, 0deg);
   z-index: 1;
 }
 .green-box {
-  background-color: #02efa47c;
-  transform: skew(-50deg, 0deg);
-  border: 2px solid #00ffae;
   margin-left: -40vw;
   margin-top: 15vh;
 }
 .green-box2 {
-  background-color: #02efa47c;
-  transform: skew(-50deg, 0deg);
-  border: 2px solid #00ffae;
   margin-left: -42vw;
   margin-top: 12vh;
 }
@@ -151,14 +151,147 @@ html {
   z-index: 1;
   transition: 0.7s ease-in-out;
 }
+.button-box a {
+  text-decoration: none;
+  color: aliceblue;
+}
 .button-box:hover {
   background-color: #02eb9a;
   color: #000;
 }
 
+.sign_form {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* margin-left: 40vw; */
+  width: 100%;
+  max-width: 120%;
+  height: 100%;
+  z-index: 30;
+}
 /* @media (max-width: 1430px)and (max-height: 800px) {
   .main-character {
     display: none;
     }
     } */
 /* @media portrait */
+@media (orientation: portrait) {
+  .my-character {
+    display: none;
+  }
+
+  body,
+  html {
+    display: flex;
+    color: white;
+    background-color: #000 !important;
+    overflow: hidden;
+  }
+  .my-container {
+    display: flex;
+    width: 100%;
+  }
+  .green-box,
+  .green-box2 {
+    display: flex;
+    position: relative;
+    border: 4px solid #00ffae;
+    max-height: 20vh;
+    height: 25vh;
+    transform: skew(50deg, 0deg);
+  }
+  .green-box2 {
+    margin-top: -7vh;
+    margin-left: -41vw;
+  }
+  .green-box {
+    margin-top: -8vh;
+    margin-left: -10vw;
+  }
+
+  .white-bar,
+  .white-bar2 {
+    display: flex;
+    position: relative;
+    max-height: 20vh;
+    height: 25vh;
+
+    transform: skew(-50deg, 0deg);
+    border: 2px solid #fdfdfdc2;
+  }
+  .white-bar {
+    position: absolute;
+    margin-top: 24.5vh;
+    margin-left: 89vw;
+  }
+  .white-bar2 {
+    margin-top: 25vh;
+    margin-left: 60vw;
+  }
+  .texte-game {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    color: aliceblue;
+    position: relative;
+    justify-content: center;
+  align-items: center;
+    left: -70%;
+    width: 20vw;
+  height: 40%;
+  max-height: 50%; 
+    z-index: 3;
+  }
+  .texte-game span:first-of-type {
+    font-size: 5vw;
+    align-items: center;
+    font-family: "Press Start 2P", cursive;
+    line-height: 1;
+    white-space: nowrap;
+
+  }
+
+  .texte-game span:nth-of-type(2) {
+    font-size: 18vw;
+    font-family: "Press Start 2P", cursive;
+    white-space: nowrap;
+    line-height: 1;
+  }
+  .texte-game span:last-of-type {
+    font-size: 5vw;
+    font-family: "Press Start 2P", cursive;
+    margin-right: 3%;
+    white-space: nowrap;
+  }
+  .texte-game div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.great-vibes-regular {
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
