--- a/content/sign_style.css
+++ b/content/sign_style.css
@@ -67,7 +67,7 @@ h6 span{
   margin: 10px auto;
   cursor: pointer;
   background-color: #ffffff;
-  cursor: url("imageLandscape/click.png"), pointer !important;
+  cursor: url("imageLandscape/click.png")16 16, pointer !important;
 
 }
 .checkbox:checked + label:before,
@@ -88,7 +88,7 @@ h6 span{
   text-align: center;
   font-size: 24px;
   transition: all 0.5s ease;
-  cursor: url("imageLandscape/click.png"), pointer !important;
+  cursor: url("imageLandscape/click.png")16 16, pointer !important;
 
 }
 .checkbox:checked + label:before {
