--- a/content/style.css
+++ b/content/style.css
@@ -7,7 +7,7 @@
 }
 
 button:hover, a:hover {
-  cursor: url("imageLandscape/click.png"), pointer !important;
+  cursor: url("imageLandscape/click.png")16 16, pointer !important;
 }
 
 body,
