--- a/content/sign_style.css
+++ b/content/sign_style.css
@@ -391,3 +391,21 @@ h6 span{
   text-align: center;
   font-size: 10%;
 }
+
+.exit {
+  position: absolute;
+  top: 2vh;
+  width: 2vw;
+  right: 1vw;
+  display: block;
+  z-index: 100;
+  transition: all 250ms linear;
+  border-radius: 200%;
+  /* box-shadow: 0px 0px 18px #00ffaec5; */
+  filter: drop-shadow(0px 0px 8px #00ffae);
+}
+
+.exit:hover {
+  cursor: url("imageLandscape/click.png"), pointer !important;
+  filter: drop-shadow(0px 0px 40px #00ffae);
+}
