--- a/content/sign_style.css
+++ b/content/sign_style.css
@@ -42,10 +42,60 @@ h6 span{
   font-weight: 700;
   color: aliceblue;
 }
+
+@keyframes sign_animation {
+  0% {
+    opacity: 0;
+    transform: translateY(100vh);
+  }
+
+  50% {
+    opacity: 0.5;
+    transform: translateY(-20vh);
+  }
+  80%
+  {
+    opacity: 0.8;
+    transform: translateY(5vh);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+}
+
 .section{
   position: relative;
   width: 100%;
   display: block;
+  animation: sign_animation 1s  1;
+}
+
+@keyframes close_animation {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  50% {
+    opacity: 0.7;
+    transform: translateY(5vh);
+  }
+  80%
+  {
+
+    opacity: 0.3;
+    transform: translateY(-80vh);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100vh);
+  }
+  
+}
+.section_reverse{
+  animation: close_animation 1s   1;
 }
 .full-height{
   min-height: 100vh;
@@ -77,7 +127,7 @@ h6 span{
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  color: #ffeba7;
+  color: #000000 !important;
   background-color: #00ffae;
   font-family: 'unicons';
   content: '\eb4f';
@@ -291,12 +341,13 @@ h6 span{
   align-items: center;
   margin-right: 30%;
   margin-left: 30%;
+  margin-bottom: 1vh;
   box-shadow: 0px 0px 18px #00ffaec5;
   border-radius: 20px;
 }
 .otherWay {
   display: flex;
-  align-items: center; 
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -415,3 +466,5 @@ h6 span{
   cursor: url("imageLandscape/click.png"), pointer !important;
   filter: drop-shadow(0px 0px 24px #00ffae);
 }
+
+
