--- a/content/style.css
+++ b/content/style.css
@@ -2,7 +2,7 @@
   /* display: inline; */
   margin: 0;
   padding: 0;
-  cursor: url("imageLandscape/pointer\ 1.png"), auto;
+  cursor: url("imageLandscape/pointer\ 1.png"), auto !important;
   /* background-color: black; */
 }
 
@@ -166,6 +166,8 @@ html {
   color: #000;
 }
 
+
+
 .sign_form {
   display: flex;
   position: absolute;
@@ -178,6 +180,39 @@ html {
   height: 100%;
   z-index: 30;
 }
+/* 
+.close_range1 {
+  display: flex;
+  position: absolute;
+  justify-content: right;
+  width: 50%;
+  height: 100%;
+  background-color: #ff00008c;
+  z-index: 20000;
+  right: 0;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* @media (max-width: 1430px)and (max-height: 800px) {
   .main-character {
     display: none;
