--- a/content/style.css
+++ b/content/style.css
@@ -6,8 +6,9 @@
   /* background-color: black; */
 }
 
-button:hover, a:hover {
-  cursor: url("imageLandscape/click.png")16 16, pointer !important;
+button:hover,
+a:hover {
+  cursor: url("imageLandscape/click.png") 16 16, pointer !important;
 }
 
 body,
@@ -28,7 +29,7 @@ html {
   min-width: 45vw;
   width: 55vw;
   height: 90vh;
-  margin-left: -1.5vw;
+  margin-left: -1.8vw;
   margin-top: 10vh;
   z-index: 2;
   filter: drop-shadow(-1px -1px 9px #02eb98);
@@ -166,8 +167,6 @@ html {
   color: #000;
 }
 
-
-
 .sign_form {
   display: flex;
   position: absolute;
@@ -191,27 +190,6 @@ html {
   z-index: 20000;
   right: 0;
 } */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* @media (max-width: 1430px)and (max-height: 800px) {
   .main-character {
