--- a/content/sign_style.css
+++ b/content/sign_style.css
@@ -1,26 +1,24 @@
-
-
 /* Please ❤ this if you like it! */
 
-
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
-
-
-body{
-	font-family: 'Poppins', sans-serif;
-	font-weight: 300;
-	font-size: 15px;
-	line-height: 1.7;
-	color: #c4c3ca;
-	background-color: #1f2029;
-	overflow-x: hidden;
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900");
+@import url("https://unicons.iconscout.com/release/v4.0.0/css/line.css");
+/* format("woff2"), */
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css");
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 1.7;
+  color: #c4c3ca;
+  background-color: #1f2029;
+  overflow-x: hidden;
 }
 a {
-	cursor: pointer;
+  cursor: pointer;
   transition: all 200ms linear;
 }
 a:hover {
-	text-decoration: none;
+  text-decoration: none;
 }
 .link {
   color: #c4c3ca;
@@ -36,7 +34,7 @@ p {
 h4 {
   font-weight: 600;
 }
-h6 span{
+h6 span {
   padding: 0 20px;
   text-transform: uppercase;
   font-weight: 700;
@@ -46,32 +44,32 @@ h6 span{
   font-size: 15px;
 }
 
-.mb-4, .btn.mt-4 {
+.mb-4,
+.btn.mt-4 {
   color: #00ffae !important;
   text-shadow: 2px 2px 5px #00ffaeb6;
 }
 
-.section{
+.section {
   position: relative;
   width: 100%;
   display: block;
-  animation: sign_animation 1s  1;
+  animation: sign_animation 1s 1;
 }
 
-
-.section_reverse{
-  animation: close_animation 1s  1;
+.section_reverse {
+  animation: close_animation 1s 1;
 }
-.full-height{
+.full-height {
   min-height: 100vh;
 }
 [type="checkbox"]:checked,
-[type="checkbox"]:not(:checked){
+[type="checkbox"]:not(:checked) {
   position: absolute;
   left: -9999px;
 }
 .checkbox:checked + label,
-.checkbox:not(:checked) + label{
+.checkbox:not(:checked) + label {
   position: relative;
   display: block;
   text-align: center;
@@ -82,11 +80,10 @@ h6 span{
   margin: 10px auto;
   cursor: pointer;
   background-color: #ffffff;
-  cursor: url("imageLandscape/click.png")16 16, pointer !important;
-
+  cursor: url("imageLandscape/click.png") 16 16, pointer !important;
 }
 .checkbox:checked + label:before,
-.checkbox:not(:checked) + label:before{
+.checkbox:not(:checked) + label:before {
   position: absolute;
   display: block;
   width: 36px;
@@ -94,8 +91,9 @@ h6 span{
   border-radius: 50%;
   color: #000000 !important;
   background-color: #00ffae;
-  font-family: 'unicons';
-  content: '\eb4f';
+  font-family: "Font Awesome 6 Free";
+  content: "\f061";
+  font-weight: 900;
   z-index: 20;
   top: -10px;
   left: -10px;
@@ -103,13 +101,11 @@ h6 span{
   text-align: center;
   font-size: 24px;
   transition: all 0.5s ease;
-  cursor: url("imageLandscape/click.png")16 16, pointer !important;
-
+  cursor: url("imageLandscape/click.png") 16 16, pointer !important;
 }
 .checkbox:checked + label:before {
   transform: translateX(44px) rotate(-270deg);
 }
-
 
 .card-3d-wrap {
   position: relative;
@@ -124,18 +120,19 @@ h6 span{
 .card-3d-wrapper {
   width: 100%;
   height: 100%;
-  position:absolute;    
+  position: absolute;
   top: 0;
-  left: 0;  
+  left: 0;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
-  transition: all 600ms ease-out; 
+  transition: all 600ms ease-out;
 }
-.card-front, .card-back {
+.card-front,
+.card-back {
   width: 100%;
   height: 100%;
   background-color: #000000;
-  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg");
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: 300%;
@@ -149,7 +146,7 @@ h6 span{
   -moz-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
-  box-shadow:2px 4px 8px #00ffae;
+  box-shadow: 2px 4px 8px #00ffae;
 }
 .card-back {
   transform: rotateY(180deg);
@@ -157,7 +154,7 @@ h6 span{
 .checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
   transform: rotateY(180deg);
 }
-.center-wrap{
+.center-wrap {
   position: absolute;
   width: 100%;
   padding: 0 35px;
@@ -166,15 +163,13 @@ h6 span{
   transform: translate3d(0, -50%, 35px) perspective(100px);
   z-index: 20;
   display: block;
-
 }
 
-
-.form-group{ 
+.form-group {
   position: relative;
   display: block;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .form-style {
   padding: 13px 20px;
@@ -192,13 +187,13 @@ h6 span{
   border: none;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
-  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, 0.2);
 }
 .form-style:focus,
 .form-style:active {
   border: none;
   outline: none;
-  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, 0.2);
 }
 .input-icon {
   position: absolute;
@@ -208,63 +203,63 @@ h6 span{
   font-size: 24px;
   line-height: 48px;
   text-align: left;
-  color: #00ffaec2;
+  color: #000000c2;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
 
-.form-group input:-ms-input-placeholder  {
+.form-group input:-ms-input-placeholder {
   color: #000000;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
-.form-group input::-moz-placeholder  {
+.form-group input::-moz-placeholder {
   color: #000000;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
-.form-group input:-moz-placeholder  {
+.form-group input:-moz-placeholder {
   color: #000000;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
-.form-group input::-webkit-input-placeholder  {
+.form-group input::-webkit-input-placeholder {
   color: #000000;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
-.form-group input:focus:-ms-input-placeholder  {
+.form-group input:focus:-ms-input-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
-.form-group input:focus::-moz-placeholder  {
+.form-group input:focus::-moz-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
-.form-group input:focus:-moz-placeholder  {
+.form-group input:focus:-moz-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
-.form-group input:focus::-webkit-input-placeholder  {
+.form-group input:focus::-webkit-input-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
 
-.btn{  
+.btn {
   border-radius: 4px;
   height: 44px;
   font-size: 13px;
   font-weight: 600;
   text-transform: uppercase;
-  -webkit-transition : all 200ms linear;
+  -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
   padding: 0 30px;
   letter-spacing: 1px;
@@ -284,24 +279,25 @@ h6 span{
   border: none;
   background-color: #000000;
   color: #00ffae;
-  box-shadow: 0 8px 20px 0 #00ffaeb4 ;
+  box-shadow: 0 8px 20px 0 #00ffaeb4;
 }
 .btn:active,
-.btn:focus{  
+.btn:focus {
   background-color: #000000;
   color: #00ffae;
-  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
 }
-.btn:hover{  
+.btn:hover {
   background-color: #000000 !important;
-  color: #ffffff !important;
-  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+  color: #00ffae !important;
+  box-shadow: 0 0px 28px 0 rgba(16, 39, 112, 0.2);
   cursor: url("imageLandscape/click.png") 16 16, pointer !important;
 }
-.mb-4, .btn.mt-4{
-	color: rgb(255, 242, 242);
+.mb-4,
+.btn.mt-4 {
+  color: rgb(255, 242, 242);
 }
-.btn.btn.mt-4{
+.btn.btn.mt-4 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -319,29 +315,27 @@ h6 span{
   justify-content: space-between;
 }
 
-
-.OrHeader
-{
+.OrHeader {
   display: flex;
   align-items: center;
   text-align: center;
   margin: 20px 0;
   padding-top: 0%;
-  color:#b3b3b3;
+  color: #00ffae;
 }
-.OrHeader::before, .OrHeader::after {
-  content: '';
+.OrHeader::before,
+.OrHeader::after {
+  content: "";
   flex: 1;
-  border-bottom: 1px solid #dadada; /* Adjust the color and thickness as needed */
+  border-bottom: 1px solid #00ffaec9; /* Adjust the color and thickness as needed */
   margin: 0 10px;
 }
-
 
 /* .otherWay a:hover{
   background-color: aliceblue;
   border: #00ffae 4px solid;
 } */
-.button{
+.button {
   display: flex;
   width: 40%;
   justify-content: right;
@@ -349,7 +343,7 @@ h6 span{
   gap: 15px;
   padding: 0;
 }
-.button a{
+.button a {
   display: flex;
   justify-content: right;
   margin-top: 8vh;
@@ -358,22 +352,18 @@ h6 span{
   padding: 0;
 }
 .btn.btn.mt-4:hover {
-	/* background-color: #02eb9a; */
-	color: #ffffff;
-	/* border: #00ffae 4px solid; */
-  box-shadow: 0px 0px 40px #00ffae;
-	transition: 0.4s ease-in-out;
+  box-shadow: 0px 0px 20px #00ffae;
+  transition: 0.4s ease-in-out;
 }
 .loginHeader {
   text-align: left;
   font-size: x-large;
-  margin-top:10vh;
+  margin-top: 10vh;
   /* background-color: #000000; */
   color: #00ffae;
   text-shadow: 2px 2px 5px #00ffaead;
-
 }
-.Logo42{
+.Logo42 {
   width: 30%;
   height: 20%;
   margin-top: 8vh;
@@ -381,7 +371,8 @@ h6 span{
   cursor: pointer;
   box-shadow: 0px 0px 18px #00ffaec5;
 }
-.Logo42:hover, .LogoGoogle:hover {
+.Logo42:hover,
+.LogoGoogle:hover {
   cursor: url("imageLandscape/click.png"), pointer !important;
   box-shadow: 0px 0px 40px #00ffae;
 }
@@ -394,29 +385,30 @@ h6 span{
   box-shadow: 0px 0px 18px #00ffaec5;
 }
 .logo {
-	position: absolute;
-	top: 30px;
-	right: 30px;
-	display: block;
-	z-index: 100;
-	transition: all 250ms linear;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  display: block;
+  z-index: 100;
+  transition: all 250ms linear;
 }
 .logo img {
-	height: 26px;
-	width: auto;
-	display: block;
+  height: 26px;
+  width: auto;
+  display: block;
 }
 .link {
-  display: block; 
-  margin-bottom: 25%; 
+  display: block;
+  margin-bottom: 25%;
   background-color: #000000;
   color: #00ffae;
 }
-.link:hover{
-  color: white;
+.link:hover {
+  color: #00ffae;
+  text-shadow: 0px 0px 9px #00ffae;
 }
 
-.section.text-center{
+.section.text-center {
   text-align: center;
   font-size: 10%;
 }
@@ -438,5 +430,3 @@ h6 span{
   cursor: url("imageLandscape/click.png"), pointer !important;
   filter: drop-shadow(0px 0px 24px #00ffae);
 }
-
-
