--- a/content/forget_pass.css
+++ b/content/forget_pass.css
@@ -28,7 +28,7 @@
 
 .text-center{
 	color: 	#00ffae;
-	text-shadow: 2px 2px 5px #000000;
+	text-shadow: 2px 2px 5px #00000071;
 }
 .panel-default{
 	background-color: rgba(0, 0, 0, 0.616) !important;
