--- a/content/style.css
+++ b/content/style.css
@@ -1,9 +1,15 @@
+/* @font-face {
+  font-family: "Press Start 2P";
+  src: url("./VirtualRotRegular-R51V.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+} */
+
 * {
-  /* display: inline; */
+
   margin: 0;
   padding: 0;
   cursor: url("imageLandscape/pointer\ 1.png"), auto !important;
-  /* background-color: black; */
 }
 
 button:hover,
@@ -15,6 +21,8 @@ body,
 html {
   display: flex;
   color: white;
+  width: 100vw;
+  height: 100vh;
   background-color: #000 !important;
   overflow: hidden;
 }
@@ -117,19 +125,19 @@ html {
 
 .texte-game span:first-of-type {
   font-size: 3vw;
-  font-family: "Press Start 2P", cursive;
+  font-family: "Press Start 2P";
   /* text-align: center; */
   line-height: 1;
 }
 .texte-game span:nth-of-type(2) {
   font-size: 8.6vw;
-  font-family: "Press Start 2P", cursive;
+  font-family: "Press Start 2P";
   white-space: nowrap;
   line-height: 1;
 }
 .texte-game span:last-of-type {
   font-size: 1.8vw;
-  font-family: "Press Start 2P", cursive;
+  font-family: "Press Start 2P";
   margin-right: 3%;
 }
 
